CSS fix for whitespace at the bottom

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@ html, body, #root, .App {
   width: 100%;
   height: 100%;
   overflow: auto;
+  position: fixed;
 }
 
 ::placeholder {
